--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,162 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+@import "~font-awesome/css/font-awesome.css";
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  min-height: 100vh;
+  background: #e2e2e2;
+  background-color: #d8eced;
+background-image: url("https://www.transparenttextures.com/patterns/gplay.png");
+}
+.container{
+    /* padding-left: 70px;
+    padding-right:70px; */
+}
+.default{
+  padding-left:80px;
+  padding-right:80px;
+}
+table{
+  margin-top: 25px;
+}
+th, td{
+  text-align: center;
+}
+th{
+  height:50px;
+  font-size: 1.1rem;
+}
+
+main{
+    /* margin-top: 180px; */
+    padding-top:70px;
+}
+.app-header {
+    font-size: 2rem;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12);
+}
+.login-wrapper {
+  height: 100%;
+}
+.positronx {
+  text-decoration: none;
+  color: #ffffff;
+}
+.box {
+  position: relative;
+  top: 0;
+  opacity: 1;
+  float: left;
+  padding: 60px 50px 40px 50px;
+  width: 100%;
+  background: #fff;
+  border-radius: 10px;
+  transform: scale(1);
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  z-index: 5;
+  max-width: 330px;
+}
+.box.back {
+  transform: scale(.95);
+  -webkit-transform: scale(.95);
+  -ms-transform: scale(.95);
+  top: -20px;
+  opacity: .8;
+  z-index: -1;
+}
+.box:before {
+  content: "";
+  width: 100%;
+  height: 30px;
+  border-radius: 10px;
+  position: absolute;
+  top: -10px;
+  background: rgba(255, 255, 255, .6);
+  left: 0;
+  transform: scale(.95);
+  -webkit-transform: scale(.95);
+  -ms-transform: scale(.95);
+  z-index: -1;
+}
+.login-wrapper .example-form {
+  min-width: 100%;
+  max-width: 300px;
+  width: 100%;
+}
+.login-wrapper .example-full-width,
+.login-wrapper .btn-block {
+  width: 100%;
+}
+.login-wrapper mat-card-header {
+  text-align: center;
+  width: 100%;
+  display: block;
+  font-weight: 700;
+}
+.login-wrapper mat-card-header mat-card-title {
+  font-size: 30px;
+  margin: 0;
+}
+.login-wrapper .mat-card {
+  padding: 40px 70px 50px;
+}
+.login-wrapper .mat-stroked-button {
+  border: 1px solid currentColor;
+  line-height: 54px;
+  background: #FFF7FA;
+}
+.login-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
+  padding: 0.8375em 0;
+}
+table{
+width:100%;
+}
+.welcome{
+  color:#556EE6;
+  font-size:17px;
+}
+.bg-soft{
+  background-color: rgba(85, 110, 230, 0.25)!important;
+}
+.app-header{
+  background-color: #2A3042;
+}
+.navItems{
+  color:#FFF7FA;
+}
+.list-inline-item{
+  margin-right: 10px;;
+}
+.card-title{
+  font-size: 1.2rem;
+}
+.navImg{
+  height:20px;
+  width: 20px;;
+}
+.card{
+  border-radius: 5%;
+}
+.profileImg{
+  height:80px;
+  width:80px;
+}
+.addAccount{
+  /* width:600px; */
+}
+@media (min-width: 1025px) {
+  .h-custom {
+  height: 100vh !important;
+  }
+  }
